# ZSilka

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  altimejt.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
resources/: resources.qrc
resources/styles/: application.qss
src/: main.cpp
src/config/: system_config.cpp  system_config.h
src/database/: menedzer_bd.cpp  menedzer_bd.h
src/database/dao/: karnet_dao.cpp  karnet_dao.h  klient_dao.cpp  klient_dao.h  zajecia_dao.cpp  zajecia_dao.h
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/dialogs/: clientdialog.cpp  clientdialog.h
src/gui/widgets/: classtablewidget.cpp  classtablewidget.h  clienttablewidget.cpp  clienttablewidget.h  dashboardwidget.cpp  dashboardwidget.h  dashboardwidget.ui  membershiptablewidget.cpp  membershiptablewidget.h
src/models/: karnet.cpp  karnet.h  klient.cpp  klient.h  rezerwacja.cpp  rezerwacja.h  zajecia.cpp  zajecia.h
src/services/: uslugi_karnetu.cpp  uslugi_karnetu.h  uslugi_klienta.cpp  uslugi_klienta.h  uslugi_raportow.cpp  uslugi_raportow.h  uslugi_zajec.cpp  uslugi_zajec.h
src/utils/: eksport_danych.cpp  eksport_danych.h  historia_zmian.cpp  historia_zmian.h  import_danych.cpp  import_danych.h  system_config.cpp
